if (${CMAKE_VERSION} VERSION_GREATER "3.18")
	find_package(Python3 COMPONENTS Interpreter Development.Module)
endif ()
pybind11_add_module(py${PROJECT_NAME} bindings.cpp)
target_link_libraries(py${PROJECT_NAME} PUBLIC ${PROJECT_NAME})
set_target_properties(dd_package PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
set_target_properties(qfr PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
set_target_properties(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
set_target_properties(py${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
