pybind11_add_module(py${PROJECT_NAME} bindings.cpp)
target_link_libraries(py${PROJECT_NAME} PUBLIC ${PROJECT_NAME} JKQ::pyqfr pybind11_json)
set_target_properties(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
if (TARGET gtest)
	target_compile_options(gtest PUBLIC -fvisibility=hidden)
	target_compile_options(gtest_main PUBLIC -fvisibility=hidden)
	target_compile_options(gmock PUBLIC -fvisibility=hidden)
	target_compile_options(gmock_main PUBLIC -fvisibility=hidden)
endif ()
